Added demo mode restrictions

--- a/Orderly.Client/Components/OrderTable.razor
+++ b/Orderly.Client/Components/OrderTable.razor
@@ -64,7 +64,7 @@
     }
 </style>
 
-<div class="table-container order-table-container">
+<div class="table-container order-table-container w-100">
     <div class="filters">
         <input type="text"
                placeholder="Search orders..."
