--- a/Orderly.Client/Pages/Marketplace.razor
+++ b/Orderly.Client/Pages/Marketplace.razor
@@ -3,6 +3,7 @@
 @using Orderly.Client.Pages.Shared
 @using Orderly.Client.Services
 @using Orderly.Shared.Dtos
+@using Orderly.Shared.Responses
 
 @page "/marketplace"
 @namespace Orderly.Client.Pages
