--- a/Orderly.Client/Pages/Dashboard/Chats.razor
+++ b/Orderly.Client/Pages/Dashboard/Chats.razor
@@ -318,7 +318,7 @@
 
         if (preview.ChatThread?.ContextType == "Order")
         {
-            _NavigationManager.NavigateTo($"/dashboard/chat/order/{preview.ContextPublicId}");
+            _NavigationManager.NavigateTo($"/dashboard/chats/order/{preview.ContextPublicId}");
         }
     }
 
