--- a/Orderly.Client/Pages/Home.razor
+++ b/Orderly.Client/Pages/Home.razor
@@ -331,7 +331,7 @@
                     your business strategies effectively.
                 </p>
 
-                <NavLink class="btn btn-outline-primary btn-lg mt-3" href="/dashboard/overview">Get Started</NavLink>
+                <NavLink class="btn btn-outline-primary btn-lg mt-3" href="/dashboard">Get Started</NavLink>
             </div>
         </div>
     </section>
