--- a/Orderly.Client/Pages/Shared/MainLayout.razor
+++ b/Orderly.Client/Pages/Shared/MainLayout.razor
@@ -257,7 +257,7 @@
                         <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Home</NavLink>
                     </li>
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="/dashboard/overview">Dashboard</NavLink>
+                        <NavLink class="nav-link" href="/dashboard" Match="NavLinkMatch.Prefix">Dashboard</NavLink>
                     </li>
                     <li class="nav-item">
                         <NavLink class="nav-link" href="/marketplace">Marketplace</NavLink>
@@ -295,7 +295,7 @@
             </div>
 
             <nav class="site-footer-nav" aria-label="Footer navigation">
-                <NavLink href="/dashboard/overview">Dashboard</NavLink>
+                <NavLink href="/dashboard">Dashboard</NavLink>
                 <NavLink href="/marketplace">Marketplace</NavLink>
                 <NavLink href="/privacy">Privacy</NavLink>
             </nav>
