Fixed chat order page bug

--- a/Orderly.Client/Pages/Chats/Order.razor
+++ b/Orderly.Client/Pages/Chats/Order.razor
@@ -92,7 +92,7 @@ else
     {
         get
         {
-            return CurrentOrder?.Product?.PublicId == CurrentUser?.PublicId;
+            return CurrentOrder?.Product?.Owner?.PublicId == CurrentUser?.PublicId;
         }
     }
 
